Fix redis caching issue and adjust feed route
